--- a/spotifymusic08/package.json
+++ b/spotifymusic08/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx typesync"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-track-player": "^4.0.1",
@@ -23,7 +25,12 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "0.73.1",
+    "@types/babel__core": "~7.20.5",
+    "@types/babel__preset-env": "~7.9.6",
+    "@types/eslint": "~8.56.2",
+    "@types/prettier": "~3.0.0",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "~6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
