--- a/appwriteauth11/android/app/build.gradle
+++ b/appwriteauth11/android/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+    // from documentation to here imported 
+    implementation "com.facebook.react:react-native:+"
+	implementation project(':react-native-config')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
@@ -117,3 +120,12 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+// important configurations
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
+// dependencies {
+// 	implementation "com.facebook.react:react-native:+"  // From node_modules
+// +	implementation project(':react-native-config')
+// }
